--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,11 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "require-jsdoc": "off",
+        "valid-jsdoc": "off",
+        "eol-last": "off",
+        "no-multi-str":"off",
+        "prefer-const":"off",
+        "max-len":"off"
     }
 }
