--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "start": "tsc-watch --onSuccess \"node dist/ejercicioPractica07/PrimeNumber.js\"",
     "doc": "typedoc",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf .nyc_output"
+    "coverage": "nyc npm test && nyc report --reporter=lcov"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,6 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "chai": "^4.3.6",
-    "coveralls": "^3.1.1",
     "eslint": "^8.11.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^9.2.2",
